test/message/test-no-extra-info-on-fatal-exception.out
*:7
throw new Error('foo');
^

Error: foo
    at Object.<anonymous> (*:7:7)
